--- a/common/build.gradle
+++ b/common/build.gradle
@@ -23,6 +23,11 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
 
-    compile project(':common')
-    compile project(':persistence')
+    compile 'com.j256.ormlite:ormlite-android:4.48'
+    compile 'com.j256.ormlite:ormlite-core:4.48'
+
+    compile 'org.roboguice:roboguice:3.0.1'
+    provided 'org.roboguice:roboblender:3.0.1'
+
+    compile 'org.apache.commons:commons-lang3:3.4'
 }
