--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.crossover.medicapp"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest
+    package="com.crossover.medicapp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:allowBackup="true"
@@ -15,9 +16,15 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".controllers.LoginActivity">
+        <activity
+            android:name=".controllers.LoginActivity"
+            android:windowSoftInputMode="stateHidden">
         </activity>
-        <activity android:name=".controllers.create_account.CreateAccountActivity">
+        <activity
+            android:name=".controllers.create_account.CreateAccountActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden">
+        </activity>
+        <activity android:name=".controllers.HomeActivity">
         </activity>
     </application>
 
