--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,15 +29,18 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+
+
+
+
+    compile project(':business')
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
-
     compile 'com.github.johnpersano:supertoasts:1.3.4@aar'
-
     compile 'com.nhaarman.listviewanimations:lib-core:3.1.0@aar'
     compile 'com.nhaarman.listviewanimations:lib-manipulation:3.1.0@aar'
     compile 'com.nhaarman.listviewanimations:lib-core-slh:3.1.0@aar'
     compile 'com.nineoldandroids:library:2.4.0'
-
-    compile project(':business')
+    compile 'com.roomorama:caldroid:2.3.1'
+    compile 'com.android.support:support-v4:23.1.1'
 }
