Calendar visualization with events has been completed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
         </activity>
         <activity android:name=".controllers.HomeActivity">
         </activity>
+        <activity android:name=".controllers.calendar.EventDetailActivity">
+        </activity>
     </application>
 
 </manifest>
