--- a/business/build.gradle
+++ b/business/build.gradle
@@ -21,6 +21,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    testCompile 'org.easymock:easymock:3.4'
+    testCompile "org.robolectric:robolectric:3.0"
     compile 'com.android.support:appcompat-v7:23.1.1'
 
     compile project(':common')
